# upload-img

./: .gitignore  README.md  next.config.js  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
app/: layout.tsx  page.tsx
components/config/: ConfigDialog.tsx
components/history/: HistoryList.tsx
components/upload/: FileSelector.tsx  UploadQueue.tsx  UploadResult.tsx
lib/: api.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  storage.rs
src-tauri/src/commands/: config.rs  mod.rs  storage.rs  upload.rs
stores/: configStore.ts  uploadStore.ts
types/: index.ts
